--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "VoidEngine"]
 	path = VoidEngine
-	url = https://github.com/MrLever/VoidEngine.git
+	url = https://github.com/MrLever/VoidEngine
