Migrate SuperVoid out of VoidEngine

--- a/Config/EngineConfig.json
+++ b/Config/EngineConfig.json
@@ -1,4 +1,4 @@
 {
-    "gameName":"MyGame",
-    "defaultLevel":"Assets/Levels/MainMenu.json"
+    "gameName":"SuperVoid",
+    "defaultLevel":"Assets/Levels/AsteroidField.json"
 }
